--- a/CSUniSchoolLabReport.cls
+++ b/CSUniSchoolLabReport.cls
@@ -35,7 +35,7 @@
 \setlist{partopsep=0pt, topsep=0pt} % Customize spacing around and inside lists
 %\renewcommand{\labelenumi}{\alph{enumi}.} % Change numbering in the enumerate environment by letter rather than number
 \usepackage{tabto}
-
+\usepackage{gensymb}
 \setlength{\parindent}{0pt} % Suppress paragraph indentation
 
 \usepackage{graphicx} % Required for including images
