--- a/template.tex
+++ b/template.tex
@@ -76,7 +76,7 @@ $endif$
 \begin{document}
 \setlength{\parskip}{12pt}
 \begin{center}
-\textbf{\textsf{FÜÜSIKA LABORATOORNE TÖÖ}} \\
+\textbf{\textsf{$main-title$}} \\
 \end{center}
 \vspace{1cm}
 \renewcommand{\arraystretch}{1}
